--- a/Notebooks/MC_FCM_Algorithm.ipynb
+++ b/Notebooks/MC_FCM_Algorithm.ipynb
@@ -98,14 +98,8 @@
    "source": [
     "alg = sSMC_FCM()\n",
     "# prepare data\n",
-    "train_X, test_X, train_y, test_y = train_test_split(\n",
-    "    elements, label, test_size=0.2, random_state=42)\n",
-    "train_size, test_size = len(train_X), len(test_X)\n",
-    "X = np.concatenate((train_X, test_X), axis=0)\n",
-    "Y = np.concatenate((train_y, np.array([math.nan]*test_size)), axis=0)\n",
-    "\n",
-    "print(\"Number of unique labels in training, test and total data: \",\n",
-    "      len(np.unique(train_y)), len(np.unique(test_y)))"
+    "X = elements\n",
+    "Y = label"
    ]
   },
   {
@@ -131,18 +125,18 @@
    ],
    "source": [
     "# initialize variables; initialize U, V, m2\n",
-    "max_iter = 200\n",
-    "alpha = 0.6\n",
-    "N = elements.shape[0]\n",
+    "print(\"Initializing variables\")\n",
+    "N = X.shape[0]\n",
     "alg.X = X\n",
-    "alg.Y = Y\n",
+    "alg.C = C\n",
     "alg.U = np.zeros((N, C))\n",
-    "alg.m = 2\n",
     "alg.epsilon = 0.0001\n",
-    "alg.V = cg.sSMC_FCM_kmean_plus_plus(elements, Y, C, alg.distance_fn, alg.lnorm)\n",
-    "alg.U = alg.update_U_non_supervision()\n",
-    "alg.m2 = alg.calculate_m2(alpha)\n",
+    "max_iter = 200\n",
+    "print(\"Initializing cluster centers and m\")\n",
+    "alg.m, alg.V = alg.generate_m_and_first_V(ml=1.1, mu=4.1)\n",
+    "print(alg.m)\n",
     "\n",
+    "print(\"Start solving the algorithm\")\n",
     "for l in range(max_iter):\n",
     "    alg.U = alg.update_U()\n",
     "    alg.V_old = alg.V\n",
@@ -150,10 +144,8 @@
     "\n",
     "    pred_y = np.argmax(alg.U, axis=1)\n",
     "\n",
-    "    train_accuracy = accuracy_score(train_y, pred_y[:train_size])\n",
-    "    test_accuracy = accuracy_score(test_y, pred_y[train_size:])\n",
-    "    print(\"Iteration: \", l, \"Train Accuracy: \",\n",
-    "          train_accuracy, \"Test Accuracy: \", test_accuracy)\n",
+    "    accuracy = accuracy_score(Y, pred_y)\n",
+    "    print(\"Iteration: \", l, \"Accuracy: \", accuracy)\n",
     "\n",
     "    if alg.is_converged():\n",
     "        break"
