--- a/Notebooks/sSMC_FCM_Algorithm.ipynb
+++ b/Notebooks/sSMC_FCM_Algorithm.ipynb
@@ -114,6 +114,39 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "V1:  [[4.98461538 3.3974359  1.45641026 0.25641026]\n",
+      " [5.91707317 2.75121951 4.24390244 1.31219512]\n",
+      " [6.53846154 2.97692308 5.53589744 2.01538462]]\n",
+      "V2:  [[5.4 3.4 1.5 0.4]\n",
+      " [5.4 3.4 1.5 0.4]\n",
+      " [5.5 2.6 4.4 1.2]]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\linh2\\source\\repos\\Multiple_Fuzzification_Coefficients_FCM\\Components\\Cores\\clusters_generations.py:24: RuntimeWarning: invalid value encountered in divide\n",
+      "  vals = vals / np.sum(vals)\n"
+     ]
+    }
+   ],
+   "source": [
+    "V1 = cg.sSMC_FCM_kmean_plus_plus(X, Y, C, alg.distance_fn, alg.lnorm)\n",
+    "print(\"V1: \", V1)\n",
+    "V2 = cg.kmean_plus_plus(X, C)\n",
+    "print(\"V2: \", V2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
      "ename": "ValueError",
      "evalue": "setting an array element with a sequence.",
      "output_type": "error",
